# oxidized-transformers

./: CODING.md  Cargo.toml
oxidized-transformers/: Cargo.toml
oxidized-transformers/src/: lib.rs
oxidized-transformers/src/architectures/: causal_lm.rs  decoder.rs  embeddings.rs  encoder.rs  mod.rs
oxidized-transformers/src/layers/: activation.rs  dropout.rs  embedding.rs  feedforward.rs  identity.rs  layer_norm.rs  linear.rs  mod.rs  module.rs
oxidized-transformers/src/layers/attention/: mask.rs  mod.rs  sdpa.rs  self_attention.rs
oxidized-transformers/src/layers/embeddings/: qk_rotary_embeddings.rs  rotary_embeddings.rs
oxidized-transformers/src/layers/transformer/: embeddings.rs  layer.rs
oxidized-transformers/src/models/: mod.rs
oxidized-transformers/src/ops/: mod.rs  nonzero.rs  strided_index.rs
oxidized-transformers/src/varbuilder/: mod.rs  quantized.rs
src/: lib.rs
src/architectures/: causal_lm.rs  embeddings.rs  encoder.rs  mod.rs
src/layers/attention/: sdpa.rs  self_attention.rs
src/layers/transformer/: embeddings.rs
src/models/: mod.rs
src/models/gpt_neox/: causal_lm.rs  config.rs  decoder.rs  mod.rs
src/models/hf/: checkpoint.rs  from_hf.rs  hf_hub.rs  mod.rs
src/models/hf_hub/: mod.rs
src/models/llama/: causal_lm.rs  config.rs  decoder.rs  mod.rs
src/models/roberta/: embeddings.rs  encoder.rs  mod.rs
src/models/transformer/: causal_lm.rs  decoder.rs  encoder.rs  mod.rs
src/tokenizers/: config.rs  hf_tokenizer.rs  mod.rs  pieces.rs  tokenizer.rs
src/tokenizers/hf_hub/: mod.rs
src/util/: mod.rs
(+12 files in other folders)
