[package]
name = "oxidized-transformers"
description = "Transformers library (not functional yet)"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/danieldk/oxidized-transformers"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "a90fc5c" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "a90fc5c" }
hf-hub = "0.3"
once_cell = "1.19.0"
regex = "1.10"
safetensors = "0.4.2"
snafu = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.15", features = ["http"] }

[dev-dependencies]
approx = "0.5"
rstest = "0.18"
ndarray = { version = "0.15.4", features = ["approx-0_5"] }
